# otori

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  autoskill.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/otori-analysis/: Cargo.toml
crates/otori-analysis/src/: derive.rs  engine.rs  lib.rs  models.rs  persist.rs
crates/otori-analysis/tests/: derive.rs  engine.rs
crates/otori-cli/: Cargo.toml
crates/otori-cli/src/: main.rs
crates/otori-core/: Cargo.toml
crates/otori-core/src/: analysis.rs  artwork.rs  backup.rs  db.rs  lib.rs  lrclib.rs  lyrics.rs  lyrics_fetch.rs  provider.rs  query.rs  scan.rs  status.rs  vocadb.rs  write.rs
crates/otori-core/tests/: analysis.rs  artwork.rs  artwork_dimensions.rs  backup.rs  db.rs  default_path.rs  embed.rs  lrclib.rs  lyrics.rs  lyrics_fetch_external.rs  query.rs  scan.rs  schema.rs  status.rs  vocadb.rs  write.rs
docs/: PRODUCT.md  SECURITY.md
docs/adr/: 0001-name-shell-architecture.md  0002-first-release-v0.1.0.md
docs/design/: app-shell-decomposition.md  bpm-analysis-rust.md  eval-expansion-round1.md  eval-expansion-round2.md  eval-expansion-round3.md  eval-expansion-round4.md  eval-expansion-round5.md  logo.md  tag-inspector.md
docs/release-notes/: v0.1.0.md
scripts/: acceptance.sh  audit_artwork.py  download-models.sh
src/: App.css  App.tsx  ContextMenu.tsx  InspectorPanel.tsx  LibraryTable.tsx  MiniPlayer.tsx  PlayerBar.tsx  QueuePanel.tsx  SettingsOverlay.tsx  ShortcutsOverlay.tsx  Spectrum.tsx  Stage.tsx  StatusBar.tsx  ToastStack.tsx  Toolbar.tsx  analysisflow.silver.test.ts  analysismodel.test.ts  analysismodel.ts  analysismodelshell.ts  analysissweep.test.ts  analysissweep.ts  artworkcache.test.ts  artworkcache.ts  beatgrid.bench.ts  beatgrid.test.ts  beatgrid.ts  beatservice.ts  bpmsweep.ts  djmix.silver.test.ts  djmix.test.ts  djmix.ts  dragregion.test.ts  energy.test.ts  energy.ts  format.test.ts  format.ts  gain.test.ts  gain.ts  gel.test.ts  gel.ts  (+59 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
