[workspace]
resolver = "2"
members = ["crates/otori-core", "crates/otori-cli", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jim Zhang"]

[workspace.dependencies]
otori-core = { path = "crates/otori-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
