[package]
name = "otori-app"
description = "Ōtori desktop shell (Tauri)"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "otori_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
otori-core.workspace = true
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tauri-plugin-dialog = "2.7.1"
base64 = "0.22.1"
