[package]
name = "otori-app"
description = "Ōtori desktop shell (Tauri)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "otori_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
otori-core.workspace = true
otori-analysis.workspace = true
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tauri-plugin-dialog = "2.7.1"
base64 = "0.22.1"
ureq = "3.3.0"
sha2 = "0.10.8"

# Win32 display-sleep blocker (SetThreadExecutionState). Already in the
# dependency tree via Tauri/rusqlite; declared here so the Windows branch
# of set_display_awake can reach kernel32 without a heavier `windows`
# crate. Target-gated so other platforms don't compile the FFI.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Power"] }

[dev-dependencies]
tempfile = "3.27.0"
