[package]
name = "otori-cli"
description = "Ōtori CLI: the agent-facing surface of the music library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "otori"
path = "src/main.rs"

[dependencies]
otori-core.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
