[package]
name = "otori-core"
description = "Ōtori core: library index, tag read/write, lyrics parsing"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lofty = "0.24.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde.workspace = true
walkdir = "2.5.0"

[dev-dependencies]
lofty = "0.24.0"
tempfile = "3.27.0"
