[package]
name = "otori-core"
description = "Ōtori core: library index, tag read/write, lyrics parsing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lofty = "0.24.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
unicode-normalization = "0.1.25"
ureq = "3.3.0"
walkdir = "2.5.0"

[dev-dependencies]
lofty = "0.24.0"
tempfile = "3.27.0"
